# assessment

./: .gitignore  README.md  form_filler.py  form_mapping.json  form_processor.py  form_template.j2  mock_data.json  processed_form.html  pyproject.toml  requirements.txt
future/: form_filler.py  form_generator.py
