[project]
name = "form-processor"
version = "0.1.0"
description = "HTML form processor using OpenAI and Jinja2"
requires-python = ">=3.8"
dependencies = [
    "requests>=2.31.0",
    "jinja2>=3.1.2",
    "openai>=1.12.0",
    "python-dotenv>=1.0.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.setuptools]
packages = ["form_filler"]

[tool.hatch.metadata]
allow-direct-references = true
